--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,10 +34,10 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-south-1
+          aws-region: us-east-1
 
       - name: Deploy to Lambda
         run: |
           aws lambda update-function-code \
-            --function-name apex-resume-formatter \
+            --function-name my-github-lambda
             --zip-file fileb://lambda.zip
